Fixed stupid overflow in SImulator

--- a/src/style/canvas.css
+++ b/src/style/canvas.css
@@ -1122,18 +1122,19 @@
 
   .MatchSimulatorContainer{
   	height:452px;
-		width:302px;
-		overflow: auto;
-		display: inline-block;
-		border-radius: 3px;
+	width:302px;
+	overflow: auto;
+	display: inline-block;
+	border-radius: 3px;
+	font-size: 0px;
  }
 
  .MatchSimulatorWrapper{
-		background: none;
-		border: none;
-		border-radius: 3px;
-		display: inline-block;
-		padding: 0px;
+	background: none;
+	border: none;
+	border-radius: 3px;
+	display: inline-block;
+	padding: 0px;
  }
 
  .MatchSimulatorWrapperTablet{
